force-app/main/default/objects/CW_SalesPlan__c/CW_SalesPlan__c.object-meta.xml
<CustomObject>
    <label>売上計画</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>管理No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>