force-app/main/default/objects/CW_SalesPlan__c/fields/ActualAmount__c.field-meta.xml
<CustomField>
    <fullName>ActualAmount__c</fullName>
    <formula>if(ispickval(BudgetActualType__c, &quot;実績&quot;),  Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*実績・見込</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>