force-app/main/default/objects/CW_SalesPlan__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>