force-app/main/default/objects/CW_SalesPlan__c/fields/arari0__c.field-meta.xml
<CustomField>
    <fullName>arari0__c</fullName>
    <label>計画粗利（千円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>