force-app/main/default/objects/CW_SalesPlan__c/fields/BudgetActualType__c.field-meta.xml
<CustomField>
    <fullName>BudgetActualType__c</fullName>
    <label>予実区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>計画</fullName>
            </value>
            <value>
                <fullName>実績</fullName>
                <default>true</default>
                <label>実績</label>
            </value>
            <value>
                <fullName>目標</fullName>
            </value>
            <value>
                <fullName>得意先計画</fullName>
            </value>
            <value>
                <fullName>確定実績</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>