force-app/main/default/objects/CW_SalesPlan__c/fields/BudgetAmount__c.field-meta.xml
<CustomField>
    <fullName>BudgetAmount__c</fullName>
    <formula>if(ispickval(BudgetActualType__c, &quot;計画&quot;),  Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*計画</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>