force-app/main/default/objects/CW_SalesPlan__c/fields/cw_arariyosan__c.field-meta.xml
<CustomField>
    <fullName>cw_arariyosan__c</fullName>
    <label>粗利予算</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>