force-app/main/default/objects/CW_SalesPlan__c/fields/cw_ararizisseki__c.field-meta.xml
<CustomField>
    <fullName>cw_ararizisseki__c</fullName>
    <label>粗利実績</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>