force-app/main/default/objects/CW_SalesPlan__c/fields/cw_t1code__c.field-meta.xml
<CustomField>
    <fullName>cw_t1code__c</fullName>
    <label>T1コード</label>
    <length>200</length>
    <type>Text</type>
</CustomField>