force-app/main/default/objects/CW_SalesPlan__c/fields/CW_tocash__c.field-meta.xml
<CustomField>
    <fullName>CW_tocash__c</fullName>
    <label>売上予算</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>