force-app/main/default/objects/CW_SalesPlan__c/fields/Cw_tok__c.field-meta.xml
<CustomField>
    <fullName>Cw_tok__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>得意先</description>
    <label>得意先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>売上計画</relationshipLabel>
    <relationshipName>Cw_tok</relationshipName>
    <type>Lookup</type>
</CustomField>