force-app/main/default/objects/CW_SalesPlan__c/fields/cw_uriagezisseki__c.field-meta.xml
<CustomField>
    <fullName>cw_uriagezisseki__c</fullName>
    <label>売上実績</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>