force-app/main/default/objects/CW_SalesPlan__c/fields/DepartmentValue__c.field-meta.xml
<CustomField>
    <fullName>DepartmentValue__c</fullName>
    <description>前年比集計の際の集計関数で使用
レポート用項目</description>
    <formula>CASE( Department__c ,
&quot;営業部&quot;,00, 
&quot;CW営業課&quot;, 01, 
&quot;カスタマーサクセス課&quot;, 02,
&quot;営業支援課&quot;,03,
99)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*部署（数式）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>