force-app/main/default/objects/CW_SalesPlan__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <formula>if(ispickval(BudgetActualType__c, &quot;目標&quot;), Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*目標</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>