force-app/main/default/objects/CW_SalesPlan__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description>レポート用項目　会計年度ソート順用</description>
    <formula>CASE(
MONTH( YearMonth__c) ,
7, &quot;01:7月&quot;,
8, &quot;02:8月&quot;,
9, &quot;03:9月&quot;,
10, &quot;04:10月&quot;,
11, &quot;05:11月&quot;,
12, &quot;06:12月&quot;,
1, &quot;07:1月&quot;,
2, &quot;08:2月&quot;,
3, &quot;09:3月&quot;,
4, &quot;10:4月&quot;,
5, &quot;11:5月&quot;,
6, &quot;12:6月&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*月</label>
    <type>Text</type>
</CustomField>