force-app/main/default/objects/CW_SalesPlan__c/fields/Oppotunity__c.field-meta.xml
<CustomField>
    <fullName>Oppotunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>売上計画</relationshipLabel>
    <relationshipName>Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>