force-app/main/default/objects/CW_SalesPlan__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <formula>if( ispickval(Oppotunity__r.StageName , &quot;S&quot;), true,
if( ispickval(Oppotunity__r.StageName , &quot;A&quot;), true,
if( ispickval(Oppotunity__r.StageName , &quot;B+&quot;), true,
if( ispickval(Oppotunity__r.StageName , &quot;B&quot;), true,
if( ispickval(BudgetActualType__c, &quot;計画&quot;), true,
false)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>予実対象</label>
    <type>Checkbox</type>
</CustomField>