force-app/main/default/objects/CW_SalesPlan__c/fields/YearMonth2__c.field-meta.xml
<CustomField>
    <fullName>YearMonth2__c</fullName>
    <formula>IF(
MONTH(YearMonth__c)&gt;=7, YEAR(YearMonth__c),YEAR(YearMonth__c)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>年月2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>