force-app/main/default/objects/CW_SalesPlan__c/fields/YearMonth__c.field-meta.xml
<CustomField>
    <fullName>YearMonth__c</fullName>
    <label>年月</label>
    <type>Date</type>
</CustomField>