force-app/main/default/objects/CW_SalesPlan__c/listViews/Cw_All01.listView-meta.xml
<ListView>
    <fullName>Cw_All01</fullName>
    <columns>NAME</columns>
    <columns>BudgetActualType__c</columns>
    <columns>Target__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>すべて</label>
</ListView>